src/tests/test-src/errors/E63-bad-member-name.syntran
// E63: bad-member-name
// A dot expression referenced a member name that doesn't exist on the
// struct

struct S
{
	x: i32,
}

let s = S{x = 1};
let b = s.y;
